# rankserver-cpp

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
cmake/: rankserver-cppConfig.cmake.in
include/rankserver/: PageBuilder.h  RankServer.h
src/: PageBuilder.cpp  RankServer.cpp  main.cpp
